<resources>
    <string name="app_name">My Application</string>
    <string name="light">light</string>
    <string name="noise">noise</string>
    <string name="ok">ok</string>
    <string name="enter_room">enter_room</string>
    <string name="image_content_description">image_content_description</string>
    <string name="lightonoff">lightonoff</string>
    <string name="ringonoff">ringonoff</string>

</resources>
