<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@color/grey" android:orientation="vertical" android:padding="20dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_gravity="center_horizontal" android:orientation="vertical">
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/enter_room" android:textAlignment="center"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:orientation="horizontal">
            <EditText android:id="@+id/editText1" android:layout_width="0dp" android:layout_weight=".70" android:layout_height="wrap_content" android:ems="10" android:inputType="text" android:singleLine="true" android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/buttonCheck"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:onClick="checkButton"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
    <requestFocus/>
    <RelativeLayout android:id="@+id/contextLayout" android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="20dp" android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:padding="25dip">
            <TableRow android:id="@+id/tableRowLight" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dip">
                <TextView android:id="@+id/textViewLight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="right" android:text="@string/light" android:textAlignment="gravity" android:textSize="24sp"/>
                <TextView android:id="@+id/textViewLightValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/red" android:textSize="24sp"/>
            </TableRow>
            <TableRow android:id="@+id/tableRowNoise" android:layout_width="0dip" android:layout_height="wrap_content" android:padding="5dip">
                <TextView android:id="@+id/textViewNoise" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="right" android:text="@string/noise" android:textAlignment="gravity" android:textSize="24sp"/>
                <TextView android:id="@+id/textViewNoiseValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/red" android:textSize="24sp"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_above="@+id/linearLayoutButtons">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="124dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/tableLayout1"
                android:layout_margin="36dp"
                android:layout_toStartOf="@+id/imageView"
                android:layout_weight="0.20"
                android:contentDescription="@string/image_content_description"
                android:src="@mipmap/ic_bulb_on" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="48dp"
                android:layout_height="192dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/linearLayoutButtons"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="100dp"
                android:layout_marginStart="32dp"
                android:layout_weight="0.16"
                android:contentDescription="@string/image_content_description"
                android:src="@mipmap/ringer_on" />
        </LinearLayout>

        <LinearLayout android:id="@+id/linearLayoutButtons" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <Button android:id="@+id/button1" style="?android:attr/buttonStyleSmall"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical|center_horizontal" android:layout_marginRight="14dp" android:onClick="switchLight" android:text="@string/lightonoff">
            </Button>
            <Button android:id="@+id/button2" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical|center_horizontal" android:layout_marginRight="14dp" android:onClick="switchRinger" android:text="@string/ringonoff"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>